# evcont

./: .gitignore  README.md  pyproject.toml  setup.py
EVCont/: CASCI_EVCont.py  CustomDMRGCI.py  DMRG_EVCont.py  EVContCI.py  FCI_EVCont.py  MD_utils.py  MPS_orb_rotation.py  ab_initio_eigenvector_continuation.py  ab_initio_gradients_loewdin.py  ab_initio_gradients_loewdin_np.py  converge_dmrg.py  customCASCI.py  electron_integral_utils.py  increase_rdms_with_MPS.py
H_chain/: H10_fci_generate_data_sampled_from_box.py  H12_fci_generate_data_sampled_from_box_from_path.py  H30_generate_models_MPS.py  H30_test_data_MPS.py  H_chain_SOAP_generate_data_sampled_from_box.py  H_chain_fci_generate_data_sampled_from_box.py  H_chain_fci_generate_data_sampled_from_box_from_path.py
backup/: old_DMRG_EVCont.py
evcont/: CASCI_EVCont.py  DMRG_EVCont.py  FCI_EVCont.py  FCI_NAC.py  HF_EVCont.py  MD_utils.py  MPS_orb_rotation.py  NAMD_utils.py  ab_initio_eigenvector_continuation.py  ab_initio_gradients_loewdin.py  converge_dmrg.py  electron_integral_utils.py  excited_utils.py  low_rank_utils.py
nx-interface/: epot  geom  grad  grad.all  nad_vectors  oldh  one_rdm_final.npy  overlap_final.npy  run-evcont-driver.py  traj_geom.npy  traj_vec.npy  two_rdm_final.npy
scripts/1D_Hubbard/: Hubbard_32_DMRG_block.py
scripts/H2O_dimer/: MPS_bond_dim_test_H2O_dimer.py  MPS_bond_dim_test_H2O_dimer_OAO.py  MPS_bond_dim_test_H2O_dimer_split_local.py
scripts/H_chain/: H10_active_space_continuation.py  H10_active_space_reference.py  (+4 more)
tutorial/: variational_eigenvector_continuation.ipynb
(+88 files in other folders)
